--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -100,6 +100,20 @@
       border: 2px solid #38bdf8;
       color: #38bdf8;
     }
+
+    /* Hero right circle */
+    .profile-circle {
+      width: 220px;
+      height: 220px;
+      border-radius: 50%;
+      background: #1e293b;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 3px solid #38bdf8;
+      font-weight: bold;
+      color: #38bdf8;
+    }
     </style>
 </head>
 <body>
